DONE: Booking and Return booking Images for books (only load) Clear all background on non main activities PassChange only getting new pass on AlertDialog TODO: Bookings list, Friends Maybe?

--- a/app/src/main/res/layout/activity_book_profile.xml
+++ b/app/src/main/res/layout/activity_book_profile.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:id="@+id/iv_bp_cover"
                 android:layout_width="150dp"
-                android:layout_height="match_parent"
+                android:layout_height="220dp"
                 app:srcCompat="@drawable/book_image" />
 
             <LinearLayout
