--- a/app/src/main/res/layout/book_card_view.xml
+++ b/app/src/main/res/layout/book_card_view.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/iv_cv_books_cover"
-            android:layout_width="70dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:layout_marginTop="5dp"
             app:srcCompat="@drawable/book_image" />
 
@@ -52,6 +52,13 @@
                 android:id="@+id/tv_cv_books_rate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_cv_books_bookedBy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="TextView" />
 
         </LinearLayout>
